# profilelab-

./: .gitignore  .pre-commit-config.yaml  LICENSE  PLAN.md  README.md
container/orchestrator/: README.md  pyproject.toml
container/orchestrator/src/profilelab_orchestrator/: __init__.py
docs/: drivers.md
drivers/bumble-web/: README.md  pyproject.toml
drivers/bumble-web/src/profilelab_driver/: __init__.py  agent.py  probe.py
drivers/macos-iphone-mirroring/: README.md  pyproject.toml
drivers/macos-iphone-mirroring/src/profilelab_driver/: agent.py  probe.py  schemas.py  session.py
