[project]
name = "profilelab-orchestrator"
version = "0.0.1"
description = "profilelab orchestrator — experiment clock, metrics polling, pi supervisor, Telegram approval"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10",
    "python-telegram-bot>=21",
    "httpx>=0.28",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
]

[project.scripts]
profilelab-orchestrator = "profilelab_orchestrator.main:main"

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/profilelab_orchestrator"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["src", "tests"]
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "RUF",
    "SIM",
    "TCH",
    "ASYNC",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
