[project]
name = "profilelab-driver-bumble-web"
version = "0.0.1"
description = "Bumble Web driver for profilelab — Playwright-based profile edits and metric reads"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "playwright>=1.48",
    "httpx>=0.28",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "instructor>=1.7",
    "anthropic>=0.40",
    "pyyaml>=6.0",
]

[project.scripts]
profilelab-driver = "profilelab_driver.agent:main"
profilelab-driver-probe = "profilelab_driver.probe:main"

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/profilelab_driver"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["src", "tests"]
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
# FastAPI registers handlers via decorators; pyright can't see the use-site.
reportUnusedFunction = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "RUF",
    "SIM",
]
# TCH (flake8-type-checking) intentionally omitted — Pydantic resolves
# annotations at runtime, and TC003 would move pydantic-used imports into
# TYPE_CHECKING blocks that Pydantic can't see.
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
