[project]
name = "profilelab-driver-macos"
version = "0.0.1"
description = "macOS iPhone Mirroring driver for profilelab — record-replay Bumble flows via cliclick/pynput"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pynput>=1.7.7",
    "mss>=9.0.2",
    "httpx>=0.28",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "instructor>=1.7",
    "anthropic>=0.40",
    "pyyaml>=6.0",
]

[project.scripts]
profilelab-driver = "profilelab_driver.agent:main"

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "ruff>=0.8",
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/profilelab_driver"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["src", "tests"]
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
# FastAPI registers handlers via decorators; pyright can't see the use-site.
reportUnusedFunction = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
]
# TCH (flake8-type-checking) intentionally omitted — Pydantic resolves
# annotations at runtime, and TC003 would move pydantic-used imports into
# TYPE_CHECKING blocks that Pydantic can't see.
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
